--- a/WebApplication5/Views/Home/Profile.cshtml
+++ b/WebApplication5/Views/Home/Profile.cshtml
@@ -2,28 +2,54 @@
 
 
 <div class="row">
-    <div class="col-6">
-        @{
-            foreach (var question in Model.Questions)
-            {
-                <div class="media">
-                    <div class="d-flex flex-column">
-                        <div class="p-2">@question.ViewCount Views</div>
-                        <div class="p-2">@question.VoteCount Votes</div>
+    <div class="col-6" id="tabs">
+        <ul>
+            <li><a href="#q-tabs">Questions</a></li>
+            <li><a href="#a-tabs">Answers</a></li>
+        </ul>
+
+        <div id="q-tabs">
+            @{
+                foreach (var question in Model.Questions)
+                {
+                    <div class="media">
+                        <div class="d-flex flex-column">
+                            <div class="p-2">@question.ViewCount Views</div>
+                            <div class="p-2">@question.VoteCount Votes</div>
+                        </div>
+                        <div class="media-body">
+                            <h5 class="mt-0">@question.Title</h5>
+                            @question.TruncatedContent
+                            <div class="d-flex justify-content-between prevent-overflow">
+                                foreach (var tag in @question.tags)
+                                {
+                                    <div class="badge bg-blue">@tag</div>
+                                }
+                            </div>
+                        </div>
                     </div>
-                    <div class="media-body">
-                    <h5 class="mt-0">@question.Title</h5>
-                    @question.TruncatedContent
-                    <div class="d-flex justify-content-between prevent-overflow">
-                        foreach (var tag in @question.tags)
-                        {
-                            <div class="badge bg-blue">@tag</div>
-                        }
-                    </div>
-                    </div>
-                </div>
+                }
             }
-        }
+        </div>
+        <div id="a-tabs">
+            @{
+                foreach (var answer in Model.Answers)
+                {
+                    <div class="media">
+                        <div class="d-flex flex-column">
+                            <div class="p-2">@answer.VoteCount Votes</div>
+                            @if (answer.IsAccepted)
+                            {
+                                <div class="p-2">This answer was accepted.</div>
+                            }
+                        </div>
+                        <div class="media-body">
+                            @answer.TruncatedContent
+                        </div>
+                    </div>
+                }
+            }
+        </div>
     </div>
     
     <div class="col-4">
