--- a/WebApplication5/Views/QuestionAndAnswer/QuestionCreate.cshtml
+++ b/WebApplication5/Views/QuestionAndAnswer/QuestionCreate.cshtml
@@ -1,6 +1,6 @@
 ﻿@model QuestionCreateViewModel
 
-<h1>Ask a though-out question to the programming community</h1>
+<h1>Ask a thought-out question to the programming community</h1>
 
 <div class="content-section">
     @using (Html.BeginForm("QuestionCreate", "Post", FormMethod.Post, new { @autocomplete = "off" }))
