--- a/WebApplication5/Views/Shared/DeleteModal.cshtml
+++ b/WebApplication5/Views/Shared/DeleteModal.cshtml
@@ -1,1 +1,21 @@
-﻿
+﻿@model DeleteModalViewModel
+
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Delete @Model.DomainName?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                @using (Html.BeginForm(Model.Action, Model.Controller, FormMethod.Post))
+                {
+                    <input class="btn btn-danger" type="submit" value="Delete"/>
+                }
+            </div>
+        </div>
+    </div>
+</div>
