make action link

--- a/WebApplication5/Views/Shared/_AskQuestion.cshtml
+++ b/WebApplication5/Views/Shared/_AskQuestion.cshtml
@@ -1,1 +1,1 @@
-﻿<h2>Don't see an answer for your question? <a>Ask here</a></h2>
+﻿<h2>Don't see an answer for your question? @Html.ActionLink("Ask here", "QuestionCreate", "Question")</h2>
