--- a/WebApplication5/Views/User/Profile.cshtml
+++ b/WebApplication5/Views/User/Profile.cshtml
@@ -59,9 +59,10 @@
                 <div class="d-flex">
                     <h5 class="card-title">@Model.Username</h5>
                     <h6 class="card-title text-muted">@Model.Email</h6>
-                    @if (HttpContext.Current.User == Model.User)
+                    @if (User == Model.User)
                     {
                         <a class="btn btn-dark" asp-area="" asp-controller="User" asp-action="Update">Update</a>
+                        <button type="button" class="btn btn-outline-dark btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
                     }
                 </div>
                 
