--- a/WebApplication5/Views/Home/Index.cshtml
+++ b/WebApplication5/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 }
 
 
-@model IndexViewModel
+@model HomeViewModel
 
 <div class="row align-items-start">
     <div class="d-flex justify-content-between">
