--- a/WebApplication5/Views/Home/SearchResults.cshtml
+++ b/WebApplication5/Views/Home/SearchResults.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = $"\"{Model.SearchQuery}\" Search Results";
 }
 
-@model SearchResultViewModel
+@model SearchResultsViewModel
 
 
 <div class="row align-items-start">
