--- a/WebApplication5/Views/QuestionAndAnswer/QuestionCreate.cshtml
+++ b/WebApplication5/Views/QuestionAndAnswer/QuestionCreate.cshtml
@@ -1,8 +1,13 @@
-﻿@model QuestionCreateViewModel
+﻿@model Question
 
 <h1>Ask a thought-out question to the programming community</h1>
 
-<div class="content-section">
+
+@section Head {
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+}
+
+<div class="content-section ml-auto mr-auto mt-3">
     @using (Html.BeginForm("QuestionCreate", "Post", FormMethod.Post, new { @autocomplete = "off" }))
     {
         @Html.AntiForgeryToken()
@@ -18,7 +23,7 @@
         <div class="form-group">
             @Html.LabelFor(m => m.Content, "Content")
             @Html.LabelFor(m => m.Content, "Elaborate on your title here and what you wanted your code to do.")
-            @Html.Editor(m => m.Content, "", "#content-editor", new { @class = "form-control")
+            @Html.Editor(m => m.Content, "", "#content-editor", new { @class = "form-control", @id="editor")
         </div>
 
         <div class="form-group">
@@ -32,3 +37,19 @@
         </div>
     }
 </div>
+
+@section Scripts {
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script>
+        var quill = new Quill('#editor', {
+          modules: {
+            toolbar: [
+              [{ header: [1, 2, false] }],
+              ['bold', 'italic', 'underline'],
+              ['image', 'code-block']
+            ]
+          },
+          theme: 'snow'
+        });
+    </script>
+}
