--- a/WebApplication5/Views/QuestionAndAnswer/_AnswerCreate.cshtml
+++ b/WebApplication5/Views/QuestionAndAnswer/_AnswerCreate.cshtml
@@ -1,9 +1,13 @@
-﻿@model QuestionCreateViewModel
+﻿@model Answer
 
 @* partial view in QuestionAnswer *@
 
+@section Head {
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+}
 
-<div class="content-section">
+
+<div class="content-section mt-2">
     @using (Html.BeginForm("AnswerCreate", "Post", FormMethod.Post, new { @autocomplete = "off" }))
     {
         @Html.AntiForgeryToken()
@@ -11,7 +15,7 @@
         <div class="form-group">
             @Html.LabelFor(m => m.Content, "Enter your Answer")
             @Html.LabelFor(m => m.Content, "Be sure to provide details and explain how your answer works.")
-            @Html.Editor(m => m.Content, "", "content-editor", new { @class = "form-control")
+            @Html.Editor(m => m.Content, "", "content-editor", new { @class = "form-control", @id="editor")
         </div>
 
         <div class="form-group">
@@ -19,3 +23,19 @@
         </div>
     }
 </div>
+
+@section Scripts {
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script>
+        var quill = new Quill('#editor', {
+          modules: {
+            toolbar: [
+              [{ header: [1, 2, false] }],
+              ['bold', 'italic', 'underline'],
+              ['image', 'code-block']
+            ]
+          },
+          theme: 'snow'
+        });
+    </script>
+}
