use models in user views

--- a/WebApplication5/Views/User/Profile.cshtml
+++ b/WebApplication5/Views/User/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProfileViewModel
+﻿@model Profile
 
 
 <div class="row">
@@ -12,22 +12,22 @@
             @{
                 foreach (var question in Model.Questions)
                 {
-                        <div class="media">
-                            <div class="d-flex flex-column">
-                                <div class="p-2">@question.ViewCount Views</div>
-                                <div class="p-2">@question.VoteCount Votes</div>
-                            </div>
-                            <div class="media-body">
-                                <h5 class="mt-0">@question.Title</h5>
-                                @question.TruncatedContent
-                                <div class="d-flex justify-content-between prevent-overflow">
-                                    foreach (var tag in @question.tags)
-                                    {
-                                        <div class="badge bg-blue">@tag</div>
-                                    }
-                                </div>
+                    <div class="media">
+                        <div class="d-flex flex-column">
+                            <div class="p-2">@question.ViewCount Views</div>
+                            <div class="p-2">@question.VoteCount Votes</div>
+                        </div>
+                        <div class="media-body">
+                            <h5 class="mt-0">@question.Title</h5>
+                            @question.TruncatedContent
+                            <div class="d-flex justify-content-between prevent-overflow">
+                                foreach (var tag in @question.tags)
+                                {
+                                    <div class="badge bg-blue">@tag</div>
+                                }
                             </div>
                         </div>
+                    </div>
                 }
             }
         </div>
@@ -35,18 +35,18 @@
             @{
                 foreach (var answer in Model.Answers)
                 {
-                        <div class="media">
-                            <div class="d-flex flex-column">
-                                <div class="p-2">@answer.VoteCount Votes</div>
-                                @if (answer.IsAccepted)
+                    <div class="media">
+                        <div class="d-flex flex-column">
+                            <div class="p-2">@answer.VoteCount Votes</div>
+                            @if (answer.IsAccepted)
                             {
-                                    <div class="p-2">This answer was accepted.</div>
+                                <div class="p-2">This answer was accepted.</div>
                             }
-                            </div>
-                            <div class="media-body">
-                                @answer.TruncatedContent
-                            </div>
                         </div>
+                        <div class="media-body">
+                            @answer.TruncatedContent
+                        </div>
+                    </div>
                 }
             }
         </div>
