--- a/WebApplication5/Views/User/Register.cshtml
+++ b/WebApplication5/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model RegisterViewModel
+﻿@model Profile
 
 
 <div class="content-section ml-auto mr-auto mt-3">
@@ -25,7 +25,7 @@
             @Html.TextBoxFor(m => m.Password, "", new { @class = "form-control form-control-lg", 
                 @type = "text", @placeholder = "Password" 
             })
-        </div
+        </div>
 
         <div class="form-group">
             @Html.Label("Confirm Password")
