--- a/WebApplication5/Views/_ViewImports.cshtml
+++ b/WebApplication5/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebApplication5
 @using WebApplication5.Models
+@using WebApplication5.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
